tests/ui/discord-frontend/entity_macro/expected_literal_8.stderr
error: unexpected end of input, expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_8.rs:38:25
   |
LL |     extra = ["extra_id":],
   |                         ^

error: aborting due to 1 previous error

